

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="com.matelau.junior.centsproject.Controllers.LoginDialogFragment">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/example_card"
        android:layout_margin="5dp"
        android:layout_centerInParent="true"
        android:padding="10dp"
        card_view:cardBackgroundColor="@color/primary">



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10"
            android:padding="2dp"
            tools:context="com.matelau.junior.centsproject.Controllers.LoginDialogFragment">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/register_card"
                android:layout_margin="10dp"
                android:layout_centerInParent="true"
                android:padding="2dp"
                android:layout_weight="2.2"
                card_view:cardBackgroundColor="@color/white">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_margin="2dp">

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/fname"
                            android:textSize="14sp"/>
                        <EditText
                            android:layout_gravity="center"
                            android:inputType="textPersonName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:id="@+id/first_name"/>

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingTop="5dp"
                            android:text="Last Name"
                            android:textSize="14sp"/>
                        <EditText
                            android:layout_gravity="center"
                            android:inputType="textPersonName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:id="@+id/last_name"/>

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/email"
                            android:paddingTop="5dp"
                            android:textSize="14sp"/>
                        <EditText
                            android:layout_gravity="center"
                            android:inputType="textEmailAddress"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_width="fill_parent"
                            android:id="@+id/user_email"/>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/pword"
                            android:paddingTop="5dp"
                            android:textSize="14sp"/>
                        <EditText
                            android:layout_gravity="center"
                            android:inputType="textPassword"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:id="@+id/user_password"/>

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:layout_gravity="left"
                            android:text="@string/cpword"
                            android:textSize="14sp"/>
                        <EditText
                            android:paddingTop="5dp"
                            android:layout_gravity="center"
                            android:inputType="textPassword"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:id="@+id/confirm_password"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:id="@+id/registration_msg"
                        android:text="@string/emessage"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="7.8"
                android:weightSum="2">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:text="@string/register"
                    android:id="@+id/register_submit"
                    android:layout_margin="15dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

