<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.matelau.junior.centsproject.Views.VisualizationFragments.CostOfLiving.COLSummaryFragment">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="5dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="3dp">
            <!--Titles-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/title1"
                    android:textSize="22sp"
                    android:textColor="@color/primary_gray"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:id="@+id/title1"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/title2"
                    android:layout_margin="2dp"
                    android:textSize="22sp"
                    android:textColor="@color/primary_gray"
                    android:gravity="center"
                    android:id="@+id/title2"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!-- LOGOS/Images -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    ads:adSize="LARGE_BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id"/>
            </LinearLayout>
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:layout_weight="1">
                <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scrollbars="vertical"
                    android:id="@+id/col_sum_list"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/plus_loc"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/search_orange"
                android:id="@+id/imageSearchButton"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
