<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.matelau.junior.centsproject.Views.VisualizationFragments.College.CollegeComparisonSummary">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="3dp">
            <!--School Names-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/school"
                android:textSize="18sp"
                android:textColor="@color/primary_gray"
                android:gravity="center"
                android:id="@+id/school1_name"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/school"
                android:textSize="18sp"
                android:textColor="@color/primary_gray"
                android:gravity="center"
                android:id="@+id/school2_name"
                android:layout_weight="1"/>
            </LinearLayout>
            <!--School LOGOS-->
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="150dp"
           android:orientation="horizontal"
           android:weightSum="2">
           <ImageView
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:id="@+id/school1_image"/>
           <ImageView
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:id="@+id/school2_image"/>
           </LinearLayout>
            <!--School Ranking-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/natl_res"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_gravity="center" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/natl_res"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/rank1"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/natl_res"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/rank2"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </LinearLayout>



            <!--In State Tuition-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_state"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/in_state"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/in_state1"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/in_state"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/in_state2"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </LinearLayout>


            <!--Out Of State-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_of_state"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/out_of_state"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/out_state1"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/out_of_state"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/out_state2"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </LinearLayout>

            <!--Grad Rate-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graduation_rate"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/graduation_rate"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/grad_rate1"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/graduation_rate"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/grad_rate2"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </LinearLayout>
            <!--Enrollment-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undergrad_enrollment"
                android:textSize="12sp"
                android:textColor="@color/black"
               android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/undergrad_enrollment"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/enrollment1"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/undergrad_enrollment"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/enrollment2"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </LinearLayout>

            <!--User Rating-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cents_user_rating"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/cents_user_rating"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/rating1"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/cents_user_rating"
                    android:textSize="16sp"
                    android:padding="5dp"
                    android:textColor="@color/primary_gray"
                    android:id="@+id/rating2"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/plus_loc"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/search_orange"
                android:id="@+id/imageSearchButton"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
